# server/src/dto/login-user.dto.ts
@@ -1,0 +1,12 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsString, IsOptional, IsNotEmpty, IsEmail, IsStrongPassword } from 'class-validator';
+
+export class LoginUserDto {
+    @IsNotEmpty()
+    @IsEmail()
+    email: string;
+
+    @IsNotEmpty()
+    @IsStrongPassword()
+    password: string;
+}
